--- a/app/globals.css
+++ b/app/globals.css
@@ -7,7 +7,7 @@
   src: url(/Fonts/readexpro/ReadexPro-Regular.ttf);
 }
 
-.readex{
+.readex {
   font-family: Readex Pro;
 }
 
@@ -16,7 +16,7 @@
   src: url(/Fonts/sen/Sen-Regular.ttf);
 }
 
-.sen{
+.sen {
   font-family: Sen;
 }
 
@@ -43,13 +43,13 @@
   left: 0%;
 }
 
-.featured_left_rings{
+.featured_left_rings {
   position: absolute;
   top: 40%;
   left: 0%;
 }
 
- 
+
 
 @media screen and (min-width:1500px) {
   .featured_ellipse_right {
@@ -85,30 +85,35 @@
   left: -15%;
 }
 
-.ani{
+.ani {
   transition: transform 0.5s ease;
 }
-.ani:hover{
+
+.ani:hover {
   transform: scale(1.1);
 }
-.anireverse{
+
+.anireverse {
   transition: transform 0.5s ease;
 }
-.anireverse:hover{
+
+.anireverse:hover {
   transform: scale(0.9);
 }
 
 @keyframes float {
   0% {
-   
+
     transform: translatey(0px);
   }
+
   50% {
-    
+
     transform: translatey(-20px);
   }
+
   100% {
- 
+
     transform: translatey(0px);
   }
 }
@@ -119,15 +124,17 @@
 
 @keyframes shine {
   0% {
-   
+
     transform: scale(1);
   }
+
   50% {
-    
+
     transform: scale(1.2);
   }
+
   100% {
- 
+
     transform: scale(1);
   }
 }
@@ -136,10 +143,81 @@
   animation: shine 2s ease-in-out infinite;
 }
 
-.bgchange{
+.bgchange {
   transition: all 0.5s ease;
   background-color: black;
 }
-.bgchange:hover{
+
+.bgchange:hover {
+  background-color: #0075FF;
+}
+
+.mob-width {
+  width: 60px !important;
+}
+
+
+@media screen and (max-width:1080px) {
+  .mob-img-size {
+    width: 600px;
+  }
+
+  .mob-img-size2 {
+    width: 200px;
+  }
+}
+
+
+/* landing responsive */
+
+
+@media screen and (min-width:1080px) and (max-width:1500px) {
+  .responsive-heading-size {
+    font-size: 5rem !important;
+  }
+
+  .responsive-btn-size {
+    width: 150px !important;
+  }
+
+  .responsive-padding {
+    padding-left: 5px !important;
+  }
+
+  .responsive-margin {
+    margin-left: 10px !important;
+  }
+
+  .responsive-mt {
+    margin-top: 4rem !important;
+  }
+
+  .responsive-font {
+    font-size: 1rem !important;
+  }
+
+  .responsive-hide {
+    display: none !important;
+  }
+}
+
+/* nexus responsive */
+
+@media screen and (min-width:1080px) and (max-width:1500px) {
+  .responsive-display {
+    display: block !important;
+  }
+
+  .responsive-width {
+    width: 100% !important;
+  }
+
+  .responsive-nexus-padding {
+    padding-left: 2rem !important;
+    padding-right: 2rem !important; 
+  }
+}
+
+.active{
   background-color: #0075FF;
 }
