--- a/app/createpresale/content/content.css
+++ b/app/createpresale/content/content.css
@@ -26,12 +26,35 @@
   z-index: 1000;
 }
 
-.button{
+.button {
   border-radius: 30px;
-  padding: .5rem 1.5rem;
-  background-color: #0075FF;
+  padding: 0.5rem 1.5rem;
+  background-color: #0075ff;
   border: none;
   color: white;
-  cursor: pointer; 
+  cursor: pointer;
   z-index: 100;
+}
+
+.text-area {
+  border-radius: 25px;
+  border: 1px solid gray;
+  width: 100%;
+  padding: 0.8rem 2rem;
+  position: relative;
+  z-index: 10;
+  resize: none;
+}
+
+.launch {
+  animation: launch 200ms ease-in;
+}
+
+@keyframes launch {
+  from {
+    transform: translateY(-150px);
+  }
+  to {
+    transform: translateY(0px);
+  }
 }
