--- a/app/components/Navbar/Modal.css
+++ b/app/components/Navbar/Modal.css
@@ -1,34 +1,210 @@
 .modal-overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    z-index: 100;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 100;
 }
 
 .modal {
-    background-color: white;
-    /* padding: 20px; */
-    border-radius: 50px;
-    width: 50%;
-    max-width: 500px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-
-
-    
+  background-color: white;
+  /* padding: 20px; */
+  border-radius: 50px;
+  width: 50%;
+  max-width: 500px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
 }
-@media screen and (max-width:1080px) {
-   .modal{
+@media screen and (max-width: 1080px) {
+  .modal {
     width: 90%;
-   }
   }
+}
+
+.profile-modal {
+  background-color: white;
+  /* padding: 20px; */
+  border-radius: 50px;
+  width: 50%;
+  max-width: 800px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+  animation: move-up 300ms ease;
+}
+
+@keyframes move-up {
+  from {
+    transform: translateY(1000px);
+  }
+  to {
+    transform: translateX(0px);
+  }
+}
+
+@media screen and (max-width: 1080px) {
+  .modal {
+    width: 90%;
+  }
+  .profile-modal {
+    width: 90%;
+  }
+}
+
 .modal-close-button {
-    position: absolute;
-    top: 10px;
-    right: 10px;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+}
+
+/* profile styles */
+
+.profile-header {
+  width: 100%;
+  padding: 1rem;
+  background-color: rgb(0, 117, 255);
+  border-radius: 35px;
+  color: white;
+}
+
+.profile-head-content {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  padding: 0rem 1rem;
+  position: relative;
+  min-height: 75px;
+}
+
+.icon-button {
+  border-radius: 50%;
+  background-color: white;
+  color: rgb(0, 117, 255);
+  width: 2.5rem;
+  height: 2.5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  position: relative;
+  z-index: 1000;
+}
+.edit-button {
+  border-radius: 35px;
+  background-color: white;
+  color: rgb(0, 117, 255);
+  padding: 0.5rem 1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 5px;
+  cursor: pointer;
+  position: relative;
+  z-index: 1000;
+  height: fit-content;
+  transition: all 500ms ease-in-out;
+}
+.edit-button:hover{
+    transform: scale(0.9);
+}
+
+.profile-bg {
+  position: absolute;
+  top: 0px;
+  left: 10%;
+  z-index: 1;
+  width: 100%;
+  display: block;
+}
+
+.profile-wrap {
+  position: absolute;
+  top: 1rem;
+  left: 39%;
+  z-index: 1;
+  width: 100%;
+  z-index: 1000;
+}
+
+.profile-image {
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  overflow: hidden;
+  background-color: gainsboro;
+  transition: all 500ms ease-in;
+  position: relative;
+  cursor: pointer;
+}
+
+.input-container {
+  margin-top: 7rem;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.input-wrapp {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 1rem;
+  max-width: 600px;
+}
+
+.profile-input {
+  padding: 0.6rem 1.4rem;
+  border-radius: 35px;
+  background-color: #edecec;
+  color: black;
+  border: 1px solid #a1a1a1;
+}
+
+.profile-input::placeholder {
+  color: black;
+}
+
+.profile-input:focus {
+  outline: none;
+}
+
+.done-button {
+  background-color: rgb(0, 117, 255);
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+  padding: 0.8rem 1rem;
+  color: white;
+  border-radius: 35px;
+  width: 100%;
+  max-width: 200px;
+}
+
+@media screen and (max-width: 1080px) {
+  .input-container {
+    display: block;
+  }
+  .profile-image {
+    width: 120px;
+    height: 120px;
+  }
+  .icon-button {
+    display: none;
+  }
+  .profile-wrap {
+    top: 1rem;
+    left: 6rem;
+  }
+  .profile-bg {
+    display: none;
+  }
+  .input-container {
+    margin-top: 4rem;
+  }
+  .profile-head-content {
+    padding: 0px;
+  }
 }
