--- a/app/components/Navbar/Modal.css
+++ b/app/components/Navbar/Modal.css
@@ -28,7 +28,7 @@
 .profile-modal {
   background-color: white;
   /* padding: 20px; */
-  border-radius: 50px;
+  border-radius: 20px;
   width: 50%;
   max-width: 800px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
@@ -65,8 +65,9 @@
   width: 100%;
   padding: 1rem;
   background-color: rgb(0, 117, 255);
-  border-radius: 35px;
+  border-radius: 25px;
   color: white;
+  min-height: 125px;
 }
 
 .profile-head-content {
@@ -91,6 +92,19 @@
   position: relative;
   z-index: 1000;
 }
+.icon-button-mob {
+  border-radius: 50%;
+  background-color: white;
+  color: rgb(0, 117, 255);
+  width: 2.5rem;
+  height: 2.5rem;
+  display: none;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  position: relative;
+  z-index: 1000;
+}
 .edit-button {
   border-radius: 35px;
   background-color: white;
@@ -106,14 +120,14 @@
   height: fit-content;
   transition: all 500ms ease-in-out;
 }
-.edit-button:hover{
-    transform: scale(0.9);
+.edit-button:hover {
+  transform: scale(0.9);
 }
 
 .profile-bg {
   position: absolute;
-  top: 0px;
-  left: 10%;
+  top: -9px;
+  left: 4%;
   z-index: 1;
   width: 100%;
   display: block;
@@ -153,7 +167,7 @@
   align-items: center;
   flex-direction: column;
   gap: 1rem;
-  max-width: 600px;
+  max-width: 650px;
 }
 
 .profile-input {
@@ -194,9 +208,12 @@
   .icon-button {
     display: none;
   }
+  .icon-button-mob {
+    display: flex;
+  }
   .profile-wrap {
-    top: 1rem;
-    left: 6rem;
+    top: 2rem;
+    left: 5rem;
   }
   .profile-bg {
     display: none;
@@ -206,5 +223,6 @@
   }
   .profile-head-content {
     padding: 0px;
+    flex-direction: row-reverse;
   }
 }
